# simon-ironclaw-extensions

./: .gitignore  CHANGELOG.md  README.md
extensions/simon-daily-briefing/: Cargo.toml  README.md  simon-daily-briefing.capabilities.json
extensions/simon-daily-briefing/src/: lib.rs
extensions/simon-daily-briefing/wit/: tool.wit
extensions/simon-family-identity/: Cargo.toml  README.md  simon-family-identity.capabilities.json
extensions/simon-family-identity/src/: lib.rs
extensions/simon-google-calendar-tool/: Cargo.toml  README.md  simon-google-calendar.capabilities.json
extensions/simon-google-calendar-tool/src/: lib.rs
extensions/simon-google-calendar-tool/wit/: tool.wit
extensions/simon-setup/: Cargo.toml  README.md  simon-setup.capabilities.json
extensions/simon-setup/src/: lib.rs
extensions/simon-telegram-channel/: Cargo.toml  README.md  simon-telegram.capabilities.json
extensions/simon-telegram-channel/src/: lib.rs
scripts/: build-ironclaw-upload-bundles.sh
