[package]
name = "simon-daily-briefing"
version = "0.1.1"
edition = "2021"
description = "Deterministic Daily Briefing tool for Simon on IronClaw"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["alloc", "std"] }
chrono-tz = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wit-bindgen = "=0.36"

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1

[workspace]
