[package]
name = "simon-family-identity"
version = "0.1.0"
edition = "2021"
description = "Canonical Simon family identity registry tool for IronClaw"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wit-bindgen = "=0.36"

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1

[workspace]
