[package]
name = "simon-google-calendar-tool"
version = "0.2.1"
edition = "2021"
description = "Simon-specific Google Calendar read/write tool for IronClaw"
license = "MIT OR Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wit-bindgen = "=0.36"

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1

[workspace]
